_generated-doc/3.0/config/quarkus-bootstrap-bootstrap-config.adoc

:summaryTableId: quarkus-bootstrap-bootstrap-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-bootstrap-bootstrap-config_configuration]]link:#quarkus-bootstrap-bootstrap-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-bootstrap-bootstrap-config_quarkus.bootstrap.effective-model-builder]]`link:#quarkus-bootstrap-bootstrap-config_quarkus.bootstrap.effective-model-builder[quarkus.bootstrap.effective-model-builder]`

[.description]
--
If set to true, the workspace initialization will be based on the effective POMs (i.e. properly interpolated, including support for profiles) instead of the raw ones.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BOOTSTRAP_EFFECTIVE_MODEL_BUILDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BOOTSTRAP_EFFECTIVE_MODEL_BUILDER+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-bootstrap-bootstrap-config_quarkus.bootstrap.workspace-discovery]]`link:#quarkus-bootstrap-bootstrap-config_quarkus.bootstrap.workspace-discovery[quarkus.bootstrap.workspace-discovery]`

[.description]
--
If set to true, workspace discovery will be enabled for all launch modes. Usually, workspace discovery is enabled by default only for dev and test modes.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BOOTSTRAP_WORKSPACE_DISCOVERY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BOOTSTRAP_WORKSPACE_DISCOVERY+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-bootstrap-bootstrap-config_quarkus.bootstrap.misaligned-platform-imports]]`link:#quarkus-bootstrap-bootstrap-config_quarkus.bootstrap.misaligned-platform-imports[quarkus.bootstrap.misaligned-platform-imports]`

[.description]
--
Whether to throw an error, warn or silently ignore misaligned platform BOM imports

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_BOOTSTRAP_MISALIGNED_PLATFORM_IMPORTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_BOOTSTRAP_MISALIGNED_PLATFORM_IMPORTS+++`
endif::add-copy-button-to-env-var[]
-- a|
`error`, `warn`, `ignore` 
|`error`

|===